tests/expectations/parser/program/hex_eof.out
Error [EPAR0370017]: Could not parse the implicit value: 0x.
    --> test:3:31
     |
   3 |     function main() { let a = 0x}
     |                               ^^
